{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 72,
  "lineage": "425ed368-d70b-7e84-94fc-7ee9182efe3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:204105346806:instance/i-09fe8ea8c7fa8f50f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09fe8ea8c7fa8f50f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kasi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019a4768c6ca1e4ae",
            "private_dns": "ip-10-0-0-228.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.228",
            "public_dns": "ec2-3-145-58-69.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.58.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a36cf9af187fac47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-045d76f6337da8a5c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040e1f33752b8db2f",
            "tags": {
              "Name": "ram"
            },
            "tags_all": {
              "Name": "ram"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045d76f6337da8a5c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg4",
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204105346806:internet-gateway/igw-09844c04bc20a920d",
            "id": "igw-09844c04bc20a920d",
            "owner_id": "204105346806",
            "vpc_id": "vpc-045c3802a486fc18f"
          },
          "dependencies": [
            "aws_vpc.kasi4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204105346806:route-table/rtb-09dfe72d68c5d82fb",
            "id": "rtb-09dfe72d68c5d82fb",
            "owner_id": "204105346806",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt"
            },
            "tags_all": {
              "Name": "rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c3802a486fc18f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kasi4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae3e55847fedb0d",
            "route_table_id": "rtb-09dfe72d68c5d82fb",
            "subnet_id": "subnet-040e1f33752b8db2f"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.db",
            "aws_vpc.kasi4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-09844c04bc20a920d",
            "id": "rtbassoc-0849e97202d585f06",
            "route_table_id": "rtb-09dfe72d68c5d82fb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204105346806:security-group/sg-045d76f6337da8a5c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045d76f6337da8a5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg4",
            "name_prefix": "",
            "owner_id": "204105346806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg4"
            },
            "tags_all": {
              "Name": "sg4"
            },
            "timeouts": null,
            "vpc_id": "vpc-045c3802a486fc18f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kasi4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204105346806:subnet/subnet-040e1f33752b8db2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040e1f33752b8db2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204105346806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            },
            "vpc_id": "vpc-045c3802a486fc18f"
          },
          "dependencies": [
            "aws_vpc.kasi4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kasi4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204105346806:vpc/vpc-045c3802a486fc18f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca8b84559a842aa9",
            "default_route_table_id": "rtb-03b70e983d572caa1",
            "default_security_group_id": "sg-0dd71ec1fb7ae6bbd",
            "dhcp_options_id": "dopt-08dc471f7edb2c6f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045c3802a486fc18f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b70e983d572caa1",
            "owner_id": "204105346806",
            "tags": {
              "Name": "kasi4"
            },
            "tags_all": {
              "Name": "kasi4"
            }
          }
        }
      ]
    }
  ]
}